--- a/WinCorePatPranali/src/app/common/masters/bank-master/bank-master-list/bank-master-list.component.html
+++ b/WinCorePatPranali/src/app/common/masters/bank-master/bank-master-list/bank-master-list.component.html
@@ -3,7 +3,7 @@
 
         <div class="main-card mb-3 card">
             <div class="card-body">
-                <h5 class="card-title">General Master List</h5>
+                <h5 class="card-title">Bank List</h5>
                 <table class="mb-0 table table-striped">
                     <thead>
                         <tr>
