Masters forms updates

--- a/WinCorePatPranali/src/app/common/masters/bank-master/bank-master-list/bank-master-list.component.html
+++ b/WinCorePatPranali/src/app/common/masters/bank-master/bank-master-list/bank-master-list.component.html
@@ -3,7 +3,19 @@
 
         <div class="main-card mb-3 card">
             <div class="card-body">
-                <h5 class="card-title">Bank List</h5>
+                <div class="row">
+                    <div class="col-md-6 position-relative">
+                        <h5 class="card-title">Banks</h5>
+                    </div>
+                    <div class="col-md-6 position-relative">
+                        <button class="mt-1 btn btn-primary float-right" (click)="configClick('new-bank')">Add Bank</button>
+                    </div>
+                </div>
+                <div>
+                   
+                   
+                </div>
+                
                 <table class="mb-0 table table-striped">
                     <thead>
                         <tr>
