--- a/WinCorePatPranali/src/app/common/masters/general-master/general-master-form/general-master-form.component.html
+++ b/WinCorePatPranali/src/app/common/masters/general-master/general-master-form/general-master-form.component.html
@@ -5,26 +5,21 @@
                 <h5 class="card-title">General Master</h5>
                 <div class="row">
                     <div class="col-md-6 position-relative">
-                        <label for="txtCode" class="">Select Master</label>
-                        <select class="mb-2 form-control">
-                            <option>Default Select</option>
-                        </select>
-                    </div>
-                    <div class="col-md-6 position-relative form-group">
-                        <button class="btn btn-info" style="margin-top: 30px;">Show List
-                        </button>
+                        <label for="txtCode" class="">Master Type</label>
+                        <input name="code" id="txtCode" readonly="true" tabindex="1"
+                            type="text" class="form-control">
                     </div>
                 </div>
                 <div class="divider"></div>
                 <div class="row">
                     <div class="col-md-6 position-relative form-group">
                         <label for="txtCode" class="">Code</label>
-                        <input name="code" id="txtCode" tabindex="1" readonly="true" maxlength="10" placeholder="0"
+                        <input name="code" id="txtCode" tabindex="2" readonly="true" maxlength="10" placeholder="0"
                             type="text" class="form-control">
                     </div>
                     <div class="col-md-6 position-relative form-group">
                         <label for="txtName" class="">Name</label>
-                        <input name="masterName" id="txtName" tabindex="2" maxlength="50" placeholder="Name"
+                        <input name="masterName" id="txtName" tabindex="3" maxlength="50" placeholder="Name"
                             type="text" class="form-control">
                     </div>
                 </div>
@@ -33,6 +28,7 @@
                     <div class="col-md-6 position-relative">
                         <button class="mt-1 btn btn-primary">Submit</button>
                         <button class="mt-1 btn btn-left-margin10 btn-secondary">Clear</button>
+                        <button class="mt-1 btn btn-left-margin10 btn-alternate" (click)="configClick('general-master')">Master List</button>
                     </div>
                     
                 </div>
