--- a/WinCorePatPranali/src/app/app-router/app-router.component.html
+++ b/WinCorePatPranali/src/app/app-router/app-router.component.html
@@ -898,7 +898,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a [class.mm-active]="isMenuSelected('priority-master')" (click)="configClick('priority-master')">
+                                    <a [class.mm-active]="isMenuSelected('priorities')" (click)="configClick('priorities')">
                                         <i class="metismenu-icon pe-7s-next-2"></i>
                                         Priority Master
                                     </a>
