--- a/WinCorePatPranali/src/app/common/masters/branch-master/branch-master-form/branch-master-form.component.html
+++ b/WinCorePatPranali/src/app/common/masters/branch-master/branch-master-form/branch-master-form.component.html
@@ -2,7 +2,7 @@
     <div class="col-md-12">
         <div class="main-card mb-3 card">
             <div class="card-body">
-                <h5 class="card-title">Branches</h5>
+                <h5 class="card-title">Bank Branch</h5>
                 <div class="row">
                     <div class="col-md-6 position-relative form-group">
                         <label for="txtCode" class="">Code</label>
@@ -62,6 +62,7 @@
                     <div class="col-md-6 position-relative">
                         <button class="mt-1 btn btn-primary">Submit</button>
                         <button class="mt-1 btn btn-left-margin10 btn-secondary">Clear</button>
+                        <button class="mt-1 btn btn-left-margin10 btn-alternate" (click)="configClick('branches')">Branch List</button>
                     </div>
                     
                 </div>
