--- a/WinCorePatPranali/src/app/common/masters/general-master/general-master-list/general-master-list.component.html
+++ b/WinCorePatPranali/src/app/common/masters/general-master/general-master-list/general-master-list.component.html
@@ -4,6 +4,22 @@
         <div class="main-card mb-3 card">
             <div class="card-body">
                 <h5 class="card-title">General Master List</h5>
+
+                <div class="row">
+                    <div class="col-md-6 position-relative">
+                        <label for="txtCode" class="">Select Master</label>
+                        <select class="mb-2 form-control">
+                            <option>Default Select</option>
+                        </select>
+                    </div>
+                    <div class="col-md-6 position-relative form-group">
+                        <button class="btn btn-info" style="margin-top: 30px;">Show List
+                        </button>
+                        <button class="mt-1 btn btn-primary btn-left-margin10" style="margin-top: 30px !important" (click)="configClick('new-general-master')">Add General
+                            Master</button>
+                    </div>
+                </div>
+
                 <table class="mb-0 table table-striped">
                     <thead>
                         <tr>
