--- a/WinCorePatPranali/src/app/common/masters/priority/priority-form/priority-form.component.html
+++ b/WinCorePatPranali/src/app/common/masters/priority/priority-form/priority-form.component.html
@@ -39,6 +39,7 @@
                     <div class="col-md-6 position-relative">
                         <button class="mt-1 btn btn-primary">Submit</button>
                         <button class="mt-1 btn btn-left-margin10 btn-secondary">Clear</button>
+                        <button class="mt-1 btn btn-left-margin10 btn-alternate" (click)="configClick('priorities')">Priority List</button>
                     </div>
                     
                 </div>
