--- a/WinCorePatPranali/src/app/common/masters/branch-master/branch-master-list/branch-master-list.component.html
+++ b/WinCorePatPranali/src/app/common/masters/branch-master/branch-master-list/branch-master-list.component.html
@@ -5,7 +5,7 @@
             <div class="card-body">
                 <div class="row">
                     <div class="col-md-6 position-relative">
-                        <h5 class="card-title">Bank Branches</h5>
+                        <h5 class="card-title">Branches</h5>
                     </div>
                     <div class="col-md-6 position-relative">
                         <button class="mt-1 btn btn-primary float-right" (click)="configClick('new-branch')">Add Branch</button>
