--- a/WinCorePatPranali/src/main.css
+++ b/WinCorePatPranali/src/main.css
@@ -5760,7 +5760,7 @@ a.close.disabled {
 
 .modal {
     position: fixed;
-    top: 0;
+    top: 9%;
     left: 0;
     z-index: 1050;
     display: none;
