--- a/WinCorePatPranali/src/app/common/masters/priority/priority-form/priority-form.component.html
+++ b/WinCorePatPranali/src/app/common/masters/priority/priority-form/priority-form.component.html
@@ -2,47 +2,70 @@
     <div class="col-md-12">
         <div class="main-card mb-3 card">
             <div class="card-body">
-                <h5 class="card-title">Priority</h5>
-                <div class="row">
-                    <div class="col-md-6 position-relative form-group">
-                        <label for="txtCode" class="">Code</label>
-                        <input name="code" id="txtCode" tabindex="1" readonly="true" maxlength="10" placeholder="0"
-                            type="text" class="form-control">
-                    </div>
-                    <div class="col-md-6 position-relative form-group">
-                        <label for="txtName" class="">Name</label>
-                        <input name="priorityName" id="txtName" tabindex="2" maxlength="50" placeholder="Name"
-                            type="text" class="form-control">
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="col-md-6 position-relative form-group">
-                        <label for="txtName" class="">Priority Amount</label>
-                        <div class="input-group">
-                            <div class="input-group-prepend"><span class="input-group-text">₹</span></div>
-                            <input placeholder="Amount" tabindex="3" step="1" type="number" maxlength="20"
-                                class="form-control">
+                <form [formGroup]="priorityForm" #form="ngForm">
+                    <h5 class="card-title">Priority</h5>
+                    <div class="row">
+                        <div class="col-md-6 position-relative form-group">
+                            <label for="txtCode" class="">Code</label>
+                            <input name="code" id="txtCode" tabindex="1" readonly="true" maxlength="10" placeholder="0"
+                                type="text" class="form-control" formControlName="code">
+                        </div>
+                        <div class="col-md-6 position-relative form-group">
+                            <label for="txtName" class="">Name</label>
+                            <input name="priorityName" id="txtName" tabindex="2" placeholder="Name" type="text"
+                                class="form-control" required maxlength="100" formControlName="name"
+                                [class.is-invalid]="name.invalid && (name.dirty || name.touched)">
+                            <div *ngIf="name.invalid && (name.dirty || name.touched)" class="invalid-feedback">
+                                <div *ngIf="name.errors?.['required']">
+                                    Name is required.
+                                </div>
+                            </div>
                         </div>
                     </div>
-                    <div class="col-md-6 position-relative form-group">
-                        <label for="txtName" class="">Weaker Amount</label>
-                        <div class="input-group">
-                            <div class="input-group-prepend"><span class="input-group-text">₹</span></div>
-                            <input placeholder="Amount" tabindex="4" step="1" type="number" maxlength="20"
-                                class="form-control">
+
+                    <div class="row">
+                        <div class="col-md-6 position-relative form-group">
+                            <label for="txtName" class="">Priority Amount</label>
+                            <div class="input-group">
+                                <div class="input-group-prepend"><span class="input-group-text">₹</span></div>
+                                <input placeholder="Amount" tabindex="3" step="1" type="number" maxlength="20"
+                                    class="form-control" formControlName="fromAmount"
+                                    [class.is-invalid]="fromAmount.invalid && (fromAmount.dirty || fromAmount.touched)">
+                                <div *ngIf="fromAmount.invalid && (fromAmount.dirty || fromAmount.touched)"
+                                    class="invalid-feedback">
+                                    <div *ngIf="fromAmount.errors?.['required']">
+                                        Priority Amount is required.
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6 position-relative form-group">
+                            <label for="txtName" class="">Weaker Amount</label>
+                            <div class="input-group">
+                                <div class="input-group-prepend"><span class="input-group-text">₹</span></div>
+                                <input placeholder="Amount" tabindex="3" step="1" type="number" maxlength="20"
+                                    class="form-control" formControlName="toAmount"
+                                    [class.is-invalid]="toAmount.invalid && (toAmount.dirty || toAmount.touched)">
+                                <div *ngIf="toAmount.invalid && (toAmount.dirty || toAmount.touched)"
+                                    class="invalid-feedback">
+                                    <div *ngIf="toAmount.errors?.['required']">
+                                        Weaker Amount is required.
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                </div>
 
-                <div class="row">
-                    <div class="col-md-6 position-relative">
-                        <button class="mt-1 btn btn-primary">Submit</button>
-                        <button class="mt-1 btn btn-left-margin10 btn-secondary">Clear</button>
-                        <button class="mt-1 btn btn-left-margin10 btn-alternate" (click)="configClick('priorities')">Priority List</button>
+                    <div class="row">
+                        <div class="col-md-6 position-relative">
+                            <button class="mt-1 btn btn-primary" (click)="savePriority()">Submit</button>
+                            <button class="mt-1 btn btn-left-margin10 btn-secondary" (click)="clear()">Clear</button>
+                            <button class="mt-1 btn btn-left-margin10 btn-alternate"
+                                (click)="configClick('priorities')">Priority List</button>
+                        </div>
+
                     </div>
-                    
-                </div>
+                </form>
             </div>
         </div>
     </div>
